kyverno-lab/policies/cpol-require-secure-context.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-secure-context
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-non-root-and-readonly
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Containers must run as non-root and with readOnlyRootFilesystem=true."
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
            containers:
              - name: "*"
                securityContext:
                  readOnlyRootFilesystem: true
